@@ -223,6 +223,10 @@ Working version
 - #8947: fix/improve support for the BFD library
   (Sébastien Hinderer, review by Damien Doligez)
 
+- #8985, #8986: fix generation of the primitives when the locale collation is
+  incompatible with C.
+  (David Allsopp, review by Nicolás Ojeda Bär, report by Sebastian Rasmussen)
+
 ### Compiler user-interface and warnings:
 
 - #8702, #8777: improved error messages for fixed row polymorphic variants
